[package]
name = "rgb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers

# for RGB
aluvm = { workspace = true }
amplify = { workspace = true }
ascii-armor = { workspace = true }

bp-core = { workspace = true }
hex = { workspace = true }
rgb-std = { workspace = true }
# rgb-schemata = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
strict_encoding = { workspace = true }
strict_types = { workspace = true }

ic-wasi-polyfill = { git = "https://github.com/wasm-forge/ic-wasi-polyfill", version = "0.3.17" }



# [patch.crates-io]
# rgb-core = { git = "https://github.com/RGB-WG/rgb-core", branch = "master" }
# rgb-std = { git = "https://github.com/RGB-WG/rgb-std", branch = "master" }
# [patch.crates-io]
# commit_verify = { git = "https://github.com/LNP-BP/client_side_validation", branch = "master" }
# bp-consensus = { git = "https://github.com/BP-WG/bp-core", branch = "master" }
# bp-dbc = { git = "https://github.com/BP-WG/bp-core", branch = "master" }
# bp-seals = { git = "https://github.com/BP-WG/bp-core", branch = "master" }
# bp-core = { git = "https://github.com/BP-WG/bp-core", branch = "master" }
# rgb-core = { git = "https://github.com/RGB-WG/rgb-core", branch = "master" }
# rgb-std = { git = "https://github.com/RGB-WG/rgb-std", branch = "master" }
# rgb-schemata = { git = "https://github.com/RGB-WG/rgb-schemata", branch = "master" }
