[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }

# for bitcoin & RGB
aluvm = { workspace = true }
amplify = { workspace = true }
ascii-armor = { workspace = true }
bitcoin = { workspace = true }
bp-core = { workspace = true }
hex = { workspace = true }
rgb-std = { workspace = true }
rgb-schemata = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
strict_encoding = { workspace = true }
strict_types = { workspace = true }
thiserror = { workspace = true }

ic-wasi-polyfill = { git = "https://github.com/wasm-forge/ic-wasi-polyfill", version = "0.3.17" }

base = { path = "../../base" }


# [patch.crates-io]
# commit_verify = { git = "https://github.com/LNP-BP/client_side_validation", branch = "master" }
# bp-consensus = { git = "https://github.com/BP-WG/bp-core", branch = "master" }
# bp-dbc = { git = "https://github.com/BP-WG/bp-core", branch = "master" }
# bp-seals = { git = "https://github.com/BP-WG/bp-core", branch = "master" }
# bp-core = { git = "https://github.com/BP-WG/bp-core", branch = "master" }
# rgb-core = { git = "https://github.com/RGB-WG/rgb-core", branch = "master" }
# rgb-std = { git = "https://github.com/RGB-WG/rgb-std", branch = "master" }
# rgb-schemata = { git = "https://github.com/RGB-WG/rgb-schemata", branch = "master" }
